--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
   },
   "dependencies": {
     "bluebird": "^3.5.1",
-    "debug": "^2.6.3",
+    "debug": "^2.6.9",
     "json-web-token": "^2.1.3",
-    "koa": "^2.2.0",
+    "koa": "^2.5.2",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
     "koa-logger": "^2.0.1",
-    "koa-onerror": "^1.2.1",
-    "koa-router": "^7.1.1",
+    "koa-onerror": "^1.3.1",
+    "koa-router": "^7.4.0",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.1",
-    "pug": "^2.0.0-rc.1",
+    "pug": "^2.0.3",
     "sequelize": "^4.38.0",
     "socket.io": "^2.1.1"
   },
