--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
+    "koa2-cors": "^2.0.6",
     "mysql2": "^1.6.1",
     "pug": "^2.0.3",
     "sequelize": "^4.38.0",
